# gilltter

./: .gignore  .gitignore  Cargo.toml  README.md
src/: base.rs  config.rs  ignore.rs  main.rs  utils.rs
src/commands/: add.rs  commit.rs  mod.rs  reset.rs  revert.rs  status.rs
src/index/: index.rs
src/objects/: blob.rs  commit.rs  mod.rs  tree.rs
