[package]
name = "gilltter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.43", features = ["derive"] }
colored = "3.0.0"
crypto = "0.5.1"
flate2 = "1.1.2"
glob = "0.3.3"
libc = "0.2.174"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sha1 = "0.10.6"
